Contact buttons gap fixed and home name and buttons centered in mobile version

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ a {
 }
 
 /* Tablet Styles */
-@media (max-width: 1000px) {
+@media (max-width: 1025px) {
   .main-content {
     display: grid;
     grid-template-rows: repeat(2, auto)  100vh repeat(4, auto) 100vh repeat(5, auto);
