--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -61,7 +61,7 @@
 }
 
 /* Tablet Styles */
-@media (max-width: 1000px) {
+@media (max-width: 1025px) {
     .about {
         padding: 110px 50px 30px 50px;
         display: block;
