--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -36,6 +36,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  
   flex: 2;
 }
 
@@ -84,9 +85,14 @@
 }
 
 /* Tablet Styles */
-@media (max-width: 1000px) {
+@media (max-width: 1025px) {
   .home-image-container {
     display: none;
+    flex: 0;
+  }
+
+  .home-name-and-buttons {
+    flex: none;
   }
 
   .home {
