--- a/src/projects/Project.css
+++ b/src/projects/Project.css
@@ -122,7 +122,7 @@
 }
 
 /* Tablet Styles */
-@media (max-width: 1000px) {
+@media (max-width: 1025px) {
     .project {
         padding: 110px 50px 30px 50px;
     }
